footer z-index fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -650,7 +650,7 @@ main div h1{
     display: block;
   }
   .btn-box a{
-    z-index: -1;
+    z-index: 1;
   }
   footer{
     z-index: -1;
